--- a/Client/src/Components/SearchPage/Search/Search.css
+++ b/Client/src/Components/SearchPage/Search/Search.css
@@ -2,13 +2,24 @@
   position: fixed;
   background-color: rgb(237, 245, 245);
   width: 100%;
+  overflow-y: auto;
+  overflow-x: hidden;
   height: 100%;
-  overflow: auto;
-  background-color: #000000;
-  background-image: linear-gradient(326deg, #ce6161 0%, #3b0d15 50%);
+  background: linear-gradient(
+      217deg,
+      rgba(184, 6, 130, 0.8),
+      rgba(255, 0, 0, 0) 70.71%
+    ),
+    linear-gradient(127deg, rgb(151, 137, 5), rgba(19, 85, 102, 0) 70.71%),
+    linear-gradient(336deg, rgba(187, 4, 4, 0.8), rgba(17, 117, 121, 0) 70.71%);
 }
-
+.wrapper::-webkit-scrollbar-track {
+  border-radius: 20px;
+  background: rgba(243, 239, 239, 0.1);
+  width: 0px;
+}
 .title {
+  position: fixed;
   padding: 20px 0 20px 45px;
   z-index: 2;
   background-color: black;
@@ -18,6 +29,7 @@
   font-size: 30px;
   font-family: 'Frank Ruhl Libre', serif;
   font-weight: bold;
+  border-bottom: 4px solid rgb(123, 76, 235);
 }
 .title #inlineTitleDesign {
   color: rgb(103, 67, 222);
@@ -26,14 +38,27 @@
 }
 
 .searchBar {
-  margin-top: 20px;
+  margin-top: 110px;
 }
 
 .pages {
   display: flex;
   justify-content: flex-end;
+  margin-bottom: 30px;
+  margin-right: 30px;
 }
 
 .searchResultsArea {
   margin-top: 20px;
+  overflow-y: hidden;
+  overflow-x: auto;
+}
+.searchResultsArea::-webkit-scrollbar {
+  -webkit-appearance: none;
+  height: 15px;
+  background-color: transparent;
+}
+
+.searchResultsArea::-webkit-scrollbar-track {
+  background: transparent;
 }
