--- a/Client/src/Components/SearchPage/SearchResultsList/SearchResultsList.css
+++ b/Client/src/Components/SearchPage/SearchResultsList/SearchResultsList.css
@@ -1,17 +1,6 @@
-
-.gridDiv{
-    display: flex;
-    flex-wrap: wrap;
-    overflow-y: scroll; 
-    justify-content: space-around;
-    flex-grow: 1;
+.gridDiv {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  flex-grow: 1;
 }
-
-html { 
-overflow: scroll;
-}
-::-webkit-scrollbar-thumb {
-    background-color: black;
-    background-color: rgba(58, 173, 194, 0.925);
-    border-radius: 30px;
-  }
