--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -6,6 +6,28 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 15px;
+  height: 15px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(177, 160, 160);
+}
+::-webkit-scrollbar-track {
+  border-radius: 20px;
+  background: rgb(243, 239, 239);
+  width: 0px;
+}
+html {
+  overflow-y: auto;
+}
+::-webkit-scrollbar-thumb {
+  border-radius: 20px;
+  box-shadow: 20px 20px rgb(104, 100, 100);
+  background-color: rgba(146, 143, 143, 0.57);
+  box-shadow: 0 0 0px rgba(231, 223, 223, 0.5);
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
